--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,5 @@
     <string name="queries_btn">Queries button</string>
     <string name="mwriters_btn">Manage writers button</string>
     <string name="help_btn">Help button\n</string>
+    <string name="availability">Availability</string>
 </resources>
